Fixed errors and realigned elements in login.html

--- a/404.css
+++ b/404.css
@@ -80,7 +80,7 @@ header{
 
   #dropdown {
     position: relative;
-    display: inline-block;
+    /* display: inline-block; */
     float: right;
     
     
