--- a/artists.css
+++ b/artists.css
@@ -88,7 +88,7 @@ h2{
 
     #dropdown {
     position: relative;
-    display: inline-block;
+    /* display: inline-block; */
     float: right;
 
 
@@ -675,7 +675,7 @@ h6 {
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
-    background-color: #000\9;
+    background-color: #000;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
     border-radius: 10px
