--- a/login.css
+++ b/login.css
@@ -80,7 +80,7 @@ header{
 
   #dropdown {
     position: relative;
-    display: inline-block;
+    /* display: inline-block; */
     float: right;
     
     
@@ -155,19 +155,23 @@ display:block;
     box-shadow: 3px 7px 20px;
 }
 
+h1{
+    margin-left:1%;
+}
+
 section{
     margin-right: 3%;
 }
 
 #sign{
     text-align: center;
-    margin-right: 1%;
+    margin-right: 4%;
 }
 
 #UserName{
     text-align: center;
     display: block;
-    margin: 5% 2% 10%;
+    margin: 5% 0% 10%;
     padding: 7%;
     border: 2px solid black
 }
@@ -183,7 +187,7 @@ section{
 #login{
     text-align: center;
     display: block;
-    margin: 5% 3 10%;
+    margin: 3% 0% 10% 37%;
     padding: 7%;
     border: 2px solid black;
 }
@@ -196,7 +200,7 @@ section{
 #forgot{
     text-align: center;
     display: block;
-    margin: 5% 0 10% 5%;
+    margin:5% 0 10% 17%;
     padding: 7%;
     border: 2px solid black
 
