--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ header{
 
   #dropdown {
     position: relative;
-    display: inline-block;
+    /* display: inline-block; */
     float: right;
     
     
@@ -263,8 +263,8 @@ h3{
 }
 
 aside{
-    display: inline-block;
-    float: right;
+    /* display: inline-block; */
+    /* float: right; */
     margin-bottom: 5%;
     background-color:  rgb(64, 93, 169);
     box-shadow: 2px 2px 5px;
